--- a/HotelProject.csproj
+++ b/HotelProject.csproj
@@ -29,4 +29,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Interfaces\" />
+    <Folder Include="Models\Services\" />
+  </ItemGroup>
+
 </Project>
